# university-db

./: CMakeLists.txt  requirements.md
src/: Address.cpp  Address.h  IndexNumber.cpp  IndexNumber.h  Name.cpp  Name.h  Pesel.cpp  Pesel.h  Sex.cpp  Sex.h  Source.cpp  Student.cpp  Student.h  StudentDataBase.cpp  StudentDataBase.h  Utils.cpp  Utils.h  test.cpp
